Fixed: Swagger documentation
Were fixed some entries in the swagger documentation
